[package]
name = "elb-dev-tools-ng"
version = "0.1.1"
authors = ["Eric Le Bihan <eric.le.bihan.dev@free.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
dirs = "2.0"
flate2 = "1.0"
handlebars = "^3.0"
regex = "^1.0"
structopt = { version = "0.3", default-features = false }
tar = "0.4"
tempfile = "3.1"

[[bin]]
name = "kemenn"
path = "src/kemenn.rs"

[[bin]]
name = "nevez"
path = "src/nevez.rs"

[[bin]]
name = "zrdm"
path = "src/zrdm.rs"